# EvaluationLaplacians

./: .gitignore  README.md  pyproject.toml  requirements.txt  slurm-6532852.out  slurm-6533058.out  slurm-6533072.out  slurm-6533175.out  slurm-6535954.out  train_laprepr.py
jobs/: params_train_laprep.py  run_train_laprep.sh
src/agent/: episodic_replay_buffer.py
src/env/grid/: grid.py
src/hyperparam/: agdo.yaml  al.yaml
src/policy/: policy.py  ppo_agent.py
src/trainer/: __init__.py  agdo.py  generalized_augmented.py  laplacian_encoder.py  laplacian_encoder_offline.py
