[project]
name = "evaluationlaplacians"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dm-haiku>=0.0.13",
    "equinox>=0.12.1",
    "gymnasium>=1.1.1",
    "jax[cuda12]>=0.5.3",
    "jaxlib>=0.5.3",
    "matplotlib>=3.10.1",
    "mpmath>=1.3.0",
    "networkx>=3.4.2",
    "numpy<2",
    "optax>=0.2.4",
    "pygame>=2.6.1",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "wandb>=0.19.9",
]
